fix: remove change transition of the scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -42,16 +42,12 @@
 .os-scrollbar-handle {
   background-color: var(--md-sys-color-primary) !important;
   cursor: grab;
-  transition: all 0.5s theme(transitionTimingFunction.out) !important;
+  transition: all 0.1s theme(transitionTimingFunction.out) !important;
   padding: 3px;
 }
 
 .os-scrollbar-handle:active {
   cursor: grabbing;
-}
-
-.os-scrollbar-handle:before {
-  transition: all 0.5s theme(transitionTimingFunction.out) !important;
 }
 
 .os-scrollbar-vertical {
